--- a/hw/Makefile.objs
+++ b/hw/Makefile.objs
@@ -28,6 +28,7 @@ devices-dirs-y += pcmcia/
 devices-dirs-y += rtc/
 devices-dirs-$(CONFIG_SCSI) += scsi/
 devices-dirs-y += sd/
+devices-dirs-y += sfp/
 devices-dirs-y += ssi/
 devices-dirs-y += timer/
 devices-dirs-$(CONFIG_TPM) += tpm/
